tests/sumo/meso/junction_control/tls_coordination/good/no_control/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_21_0+1557-fb9ec070d59 started with time: 0.00.
Simulation ended at time: 111.00.
Reason: All vehicles have left the simulation.
Performance:
 Duration: 0.00s
 Real time factor: 55500
 UPS: 341500.000000
Vehicles:
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 13.19
 Duration: 22.77
 WaitingTime: 0.00
 TimeLoss: 0.80
 DepartDelay: 8.90
